// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Space Basic 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border: 1px solid rgba(0,0,0,0.12);
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 32px;
  width: 32px;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Space With Custom Dimensions 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border: 2px solid rgba(0,0,0,0.12);
  margin-top: 8px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.8125rem;
  font-weight: 700;
  line-height: 1.26584375rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.32965625rem);
  -ms-transform: translateY(0.32965625rem);
  transform: translateY(0.32965625rem);
  text-align: initial;
}

.c2::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.7593125rem;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.015843750000000004rem;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 24px;
}

.c6 *,
.c6 *::before,
.c6 *::after {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 84px;
  width: 84px;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 160px;
  width: 160px;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 240px;
  width: 400px;
}

.c8 *,
.c8 *::before,
.c8 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div>
    <span
      className="c1 c2"
    >
      <span
        className="c3"
      >
        *10.5
      </span>
    </span>
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
  </div>
  <div
    className="c6"
  />
  <div>
    <span
      className="c1 c2"
    >
      <span
        className="c3"
      >
        *20
      </span>
    </span>
    <div
      className="c4"
    >
      <div
        className="c7"
      />
    </div>
  </div>
  <div
    className="c6"
  />
  <div>
    <span
      className="c1 c2"
    >
      <span
        className="c3"
      >
        *30 x *50
      </span>
    </span>
    <div
      className="c4"
    >
      <div
        className="c8"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Space With Flex Row 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border: 1px solid rgba(0,0,0,0.12);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background-color: #FFFFFF;
  height: 50px;
  border-right: 1px solid rgba(0,0,0,0.12);
  color: rgba(0,0,0,0.87);
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  background-color: #FFFFFF;
  height: 50px;
  border-left: 1px solid rgba(0,0,0,0.12);
  color: rgba(0,0,0,0.87);
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  width: 32px;
}

.c2 *,
.c2 *::before,
.c2 *::after {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots Components/Space With Responsive Dimensions 1`] = `
.c7 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  background-color: initial;
  color: inherit;
  display: block;
}

.c7 *,
.c7 *::before,
.c7 *::after {
  box-sizing: border-box;
}

.c0 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  max-width: 420px;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c0 *,
.c0 *::before,
.c0 *::after {
  box-sizing: border-box;
}

.c14 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c14 *,
.c14 *::before,
.c14 *::after {
  box-sizing: border-box;
}

.c15 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  min-width: 0;
  border: 2px solid rgba(0,0,0,0.12);
  background-color: inherit;
  color: rgba(0,0,0,0.87);
}

.c15 *,
.c15 *::before,
.c15 *::after {
  box-sizing: border-box;
}

.c8 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 1rem;
  font-weight: 700;
  line-height: 1.5195rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.3865rem);
  -ms-transform: translateY(0.3865rem);
  transform: translateY(0.3865rem);
  text-align: initial;
}

.c8::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.873rem;
}

.c11 {
  font-family: neue-haas-grotesk-text,Helvetica,"Open Sans",sans-serif;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.2670625rem;
  text-transform: none;
  padding-top: 0.1rem;
  -webkit-transform: translateY(0.30693750000000003rem);
  -ms-transform: translateY(0.30693750000000003rem);
  transform: translateY(0.30693750000000003rem);
  text-align: initial;
}

.c11::before {
  content: "";
  display: block;
  height: 0;
  margin-top: -0.713875rem;
}

.c12 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.017062500000000008rem;
}

.c12 *,
.c12 *::before,
.c12 *::after {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0);
  display: block;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  text-transform: inherit;
  vertical-align: -0.019500000000000003rem;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 *,
.c9 *::before,
.c9 *::after {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: #FFFFFF;
  box-shadow: none;
  color: rgba(0,0,0,0.87);
  position: relative;
}

.c1 *,
.c1 *::before,
.c1 *::after {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  background-color: rgba(0,0,0,0.87);
  bottom: 0;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  right: 0;
  top: 0;
}

.c3 *,
.c3 *::before,
.c3 *::after {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c4 *,
.c4 *::before,
.c4 *::after {
  box-sizing: border-box;
}

.c2 {
  border: 1px solid rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 16px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
}

.c10 *,
.c10 *::before,
.c10 *::after {
  box-sizing: border-box;
}

.c10:first-child {
  padding-top: 32px;
}

.c10:last-child {
  padding-bottom: 32px;
}

.c10:only-child {
  padding-bottom: 32px;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 32px 24px;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  padding-bottom: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 *,
.c5 *::before,
.c5 *::after {
  box-sizing: border-box;
}

.c5:only-child {
  padding-bottom: 32px;
}

.c6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: -4px;
  overflow: hidden;
  padding: 4px 0px;
  -webkit-transform: translateY(2px);
  -ms-transform: translateY(2px);
  transform: translateY(2px);
}

.c13 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 16px;
}

.c13 *,
.c13 *::before,
.c13 *::after {
  box-sizing: border-box;
}

.c16 {
  box-sizing: border-box;
  margin: 0;
  moz-osx-font-smoothing: grayscale;
  -ms-text-size-adjust: antialiased;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-text-size-adjust: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  display: block;
  height: 16px;
  width: 16px;
}

.c16 *,
.c16 *::before,
.c16 *::after {
  box-sizing: border-box;
}

@media screen and (min-width:600px) {
  .c16 {
    height: 48px;
    width: 48px;
  }
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  >
    <div
      className="c3"
    />
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <h2
            className="c7 c8"
          >
            <span
              className="c9"
            >
              Using Responsive Props
            </span>
          </h2>
        </div>
      </div>
      <div
        className="c10"
      >
        <p
          className="c7 c11"
        >
          <span
            className="c12"
          >
            This box is smaller at breakpoints smaller than 600px.
          </span>
        </p>
        <div
          className="c13"
        />
        <div
          className="c14"
        >
          <div
            className="c15"
          >
            <div
              className="c16"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
